
Thanks to Björn "Vampire" Kautler, Nathan Gray, Evan Wright, Alan Ezust, Dale
Anson, Matthieu Casanova, Olivier Pisano, Jimmy Chaw, peibl, Robert Schwenn,
Martin Raspe, Max Funk, SPennington, Ingo Tomahogh, Jarek Czekalski, Jojaba,
Stephen Blackheath, Milan Černil, Makarius, Chris Sullins, Peter C. Chapin,
Thomas Meyer and Tom Power for contributing to this release.

{{{ Bug fixes

- The mirror "Plugin Central default" now works as auto selecting
  mirror and is used by default. Previous default was hardcoded "switch"
  (mirror.switch.ch) as workaround, but one could easily stuck on broken
  "Plugin Central default" and got strange errors.
  (#2913393, #3501210 - Kazutoshi Satoda)

- Avoided annoying behavior of electric keys that canceled obvious
  manual indentation. Now they take effect only when the current level
  of indentation is same with automatic indentation.
  (#1936678, #2332140 Jarek Czekalski, Kazutoshi Satoda)

- Fixed "Backup on every save" resets file permissions. Renaming of the file
  was replaced with copying. (#1803073 Jarek Czekalski)

- Added backup of remote files, for example opened with FTP plugin.
  (#1525654 Jarek Czekalski)

- Fixed NPE which was shown in place of a proper error message for empty
  keyword elements in mode XML. (Kazutoshi Satoda)

- Cannot DnD betweeen PingPongLists (#3501020 Jarek Czekalski)

- Fixed macros at menu split are unaccessible (#3512853 Jarek Czekalski)

- If the same plugin is installed in home and install folder, only the newest
  is loaded. (#1848802 Matthieu Casanova)

- Fixed rectangular selection constructor (patch #3440310 peibl)

- When copying a file in VFSBrowser, if a file with the same name already exists
  a suffix copy-n is added to avoid deleting the existing file
  (#3470759 Matthieu Casanova)

- Fixed Ctrl + key not working in completion popup (Matthieu Casanova)

- Fixed copy of Hypersearch results adding \r in the clipboard
  (#3142456 Matthieu Casanova)
